nos/grammar/NOSParser.py
# Generated from nos/grammar/NOSParser.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class NOSParser ( Parser ):

    grammarFileName = "NOSParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'package'", "'version'", "'depends'", 
                     "'import'", "'as'", "'node'", "'parameters'", "'subscriptions'", 
                     "'publications'", "'services'", "'actions'", "'action'", 
                     "'lifecycle'", "'components'", "'on'", "'on_init'", 
                     "'on_shutdown'", "'on_parameter_change'", "'launch'", 
                     "'group'", "'container'", "'include'", "'arguments'", 
                     "'args'", "'namespace'", "'topic'", "'service'", "'response'", 
                     "'remap'", "'manages'", "'transitions'", "'from'", 
                     "'to'", "'message'", "'request'", "'goal'", "'feedback'", 
                     "'result'", "'id'", "'load_component'", "'bool'", "'int'", 
                     "'float'", "'double'", "'string'", "'duration'", "'time'", 
                     "'list'", "'struct'", "'managed'", "'unmanaged'", "'true'", 
                     "'false'", "'+'", "'-'", "'*'", "'/'", "'%'", "'&&'", 
                     "'||'", "'!'", "'=='", "'!='", "'<='", "'>='", "'<'", 
                     "'>'", "'='", "'('", "')'", "<INVALID>", "<INVALID>", 
                     "'['", "']'", "':'", "';'", "','", "'.'", "'::'", "'@'", 
                     "'$'", "'->'" ]

    symbolicNames = [ "<INVALID>", "PACKAGE", "VERSION", "DEPENDS", "IMPORT", 
                      "AS", "NODE", "PARAMETERS", "SUBSCRIPTIONS", "PUBLICATIONS", 
                      "SERVICES", "ACTIONS", "ACTION", "LIFECYCLE", "COMPONENTS", 
                      "ON", "ON_INIT", "ON_SHUTDOWN", "ON_PARAMETER_CHANGE", 
                      "LAUNCH", "GROUP", "CONTAINER", "INCLUDE", "ARGUMENTS", 
                      "ARGS", "NAMESPACE", "TOPIC", "SERVICE", "RESPONSE", 
                      "REMAP", "MANAGES", "TRANSITIONS", "FROM", "TO", "MESSAGE", 
                      "REQUEST", "GOAL", "FEEDBACK", "RESULT", "ID", "LOAD_COMPONENT", 
                      "BOOL", "INT", "FLOAT", "DOUBLE", "STRING", "DURATION", 
                      "TIME", "LIST", "STRUCT", "MANAGED", "UNMANAGED", 
                      "TRUE", "FALSE", "PLUS", "MINUS", "STAR", "SLASH", 
                      "MOD", "AND", "OR", "NOT", "EQ", "NEQ", "LE", "GE", 
                      "LT", "GT", "ASSIGN", "LPAREN", "RPAREN", "LBRACE", 
                      "RBRACE", "LBRACKET", "RBRACKET", "COLON", "SEMICOLON", 
                      "COMMA", "DOT", "SCOPE", "AT", "DOLLAR", "ARROW", 
                      "PYTHON_START", "INT_LITERAL", "FLOAT_LITERAL", "STRING_LITERAL", 
                      "DURATION_LITERAL", "IDENTIFIER", "LINE_COMMENT", 
                      "BLOCK_COMMENT", "WS", "PYTHON_CODE", "PYTHON_LINE", 
                      "PYTHON_NL", "PYTHON_LBRACE", "PYTHON_RBRACE" ]

    RULE_nosFile = 0
    RULE_packageDecl = 1
    RULE_version = 2
    RULE_depends = 3
    RULE_importDecl = 4
    RULE_nodeDecl = 5
    RULE_nodeBody = 6
    RULE_parameterBlock = 7
    RULE_parameterDecl = 8
    RULE_constraint = 9
    RULE_typeSpec = 10
    RULE_primitiveType = 11
    RULE_fieldDecl = 12
    RULE_subscriptionBlock = 13
    RULE_subscriptionDecl = 14
    RULE_publicationBlock = 15
    RULE_publicationDecl = 16
    RULE_serviceBlock = 17
    RULE_serviceDecl = 18
    RULE_actionBlock = 19
    RULE_actionDecl = 20
    RULE_lifecycleDecl = 21
    RULE_componentBlock = 22
    RULE_componentDecl = 23
    RULE_parameterOverride = 24
    RULE_callbackDecl = 25
    RULE_pythonCode = 26
    RULE_launchDecl = 27
    RULE_launchBody = 28
    RULE_argumentBlock = 29
    RULE_argumentDecl = 30
    RULE_groupDecl = 31
    RULE_nodeInstance = 32
    RULE_nodeConfig = 33
    RULE_remapDecl = 34
    RULE_containerDecl = 35
    RULE_componentInstance = 36
    RULE_includeDecl = 37
    RULE_includeArgs = 38
    RULE_namedArgument = 39
    RULE_lifecycleManagerDecl = 40
    RULE_managesBlock = 41
    RULE_transitionBlock = 42
    RULE_transitionDecl = 43
    RULE_launchEventDecl = 44
    RULE_eventAction = 45
    RULE_interfaceDecl = 46
    RULE_messageDecl = 47
    RULE_serviceDecl_interface = 48
    RULE_requestBlock = 49
    RULE_responseBlock = 50
    RULE_actionDecl_interface = 51
    RULE_goalBlock = 52
    RULE_feedbackBlock = 53
    RULE_resultBlock = 54
    RULE_expression = 55
    RULE_primaryExpression = 56
    RULE_literal = 57
    RULE_expressionList = 58
    RULE_fieldInitializer = 59
    RULE_parameterList = 60
    RULE_parameter = 61
    RULE_argumentList = 62
    RULE_argument = 63
    RULE_qualifiedIdentifier = 64
    RULE_identifier = 65

    ruleNames =  [ "nosFile", "packageDecl", "version", "depends", "importDecl", 
                   "nodeDecl", "nodeBody", "parameterBlock", "parameterDecl", 
                   "constraint", "typeSpec", "primitiveType", "fieldDecl", 
                   "subscriptionBlock", "subscriptionDecl", "publicationBlock", 
                   "publicationDecl", "serviceBlock", "serviceDecl", "actionBlock", 
                   "actionDecl", "lifecycleDecl", "componentBlock", "componentDecl", 
                   "parameterOverride", "callbackDecl", "pythonCode", "launchDecl", 
                   "launchBody", "argumentBlock", "argumentDecl", "groupDecl", 
                   "nodeInstance", "nodeConfig", "remapDecl", "containerDecl", 
                   "componentInstance", "includeDecl", "includeArgs", "namedArgument", 
                   "lifecycleManagerDecl", "managesBlock", "transitionBlock", 
                   "transitionDecl", "launchEventDecl", "eventAction", "interfaceDecl", 
                   "messageDecl", "serviceDecl_interface", "requestBlock", 
                   "responseBlock", "actionDecl_interface", "goalBlock", 
                   "feedbackBlock", "resultBlock", "expression", "primaryExpression", 
                   "literal", "expressionList", "fieldInitializer", "parameterList", 
                   "parameter", "argumentList", "argument", "qualifiedIdentifier", 
                   "identifier" ]

    EOF = Token.EOF
    PACKAGE=1
    VERSION=2
    DEPENDS=3
    IMPORT=4
    AS=5
    NODE=6
    PARAMETERS=7
    SUBSCRIPTIONS=8
    PUBLICATIONS=9
    SERVICES=10
    ACTIONS=11
    ACTION=12
    LIFECYCLE=13
    COMPONENTS=14
    ON=15
    ON_INIT=16
    ON_SHUTDOWN=17
    ON_PARAMETER_CHANGE=18
    LAUNCH=19
    GROUP=20
    CONTAINER=21
    INCLUDE=22
    ARGUMENTS=23
    ARGS=24
    NAMESPACE=25
    TOPIC=26
    SERVICE=27
    RESPONSE=28
    REMAP=29
    MANAGES=30
    TRANSITIONS=31
    FROM=32
    TO=33
    MESSAGE=34
    REQUEST=35
    GOAL=36
    FEEDBACK=37
    RESULT=38
    ID=39
    LOAD_COMPONENT=40
    BOOL=41
    INT=42
    FLOAT=43
    DOUBLE=44
    STRING=45
    DURATION=46
    TIME=47
    LIST=48
    STRUCT=49
    MANAGED=50
    UNMANAGED=51
    TRUE=52
    FALSE=53
    PLUS=54
    MINUS=55
    STAR=56
    SLASH=57
    MOD=58
    AND=59
    OR=60
    NOT=61
    EQ=62
    NEQ=63
    LE=64
    GE=65
    LT=66
    GT=67
    ASSIGN=68
    LPAREN=69
    RPAREN=70
    LBRACE=71
    RBRACE=72
    LBRACKET=73
    RBRACKET=74
    COLON=75
    SEMICOLON=76
    COMMA=77
    DOT=78
    SCOPE=79
    AT=80
    DOLLAR=81
    ARROW=82
    PYTHON_START=83
    INT_LITERAL=84
    FLOAT_LITERAL=85
    STRING_LITERAL=86
    DURATION_LITERAL=87
    IDENTIFIER=88
    LINE_COMMENT=89
    BLOCK_COMMENT=90
    WS=91
    PYTHON_CODE=92
    PYTHON_LINE=93
    PYTHON_NL=94
    PYTHON_LBRACE=95
    PYTHON_RBRACE=96

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class NosFileContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(NOSParser.EOF, 0)

        def packageDecl(self):
            return self.getTypedRuleContext(NOSParser.PackageDeclContext,0)


        def importDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(NOSParser.ImportDeclContext)
            else:
                return self.getTypedRuleContext(NOSParser.ImportDeclContext,i)


        def nodeDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(NOSParser.NodeDeclContext)
            else:
                return self.getTypedRuleContext(NOSParser.NodeDeclContext,i)


        def launchDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(NOSParser.LaunchDeclContext)
            else:
                return self.getTypedRuleContext(NOSParser.LaunchDeclContext,i)


        def interfaceDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(NOSParser.InterfaceDeclContext)
            else:
                return self.getTypedRuleContext(NOSParser.InterfaceDeclContext,i)


        def getRuleIndex(self):
            return NOSParser.RULE_nosFile

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNosFile" ):
                listener.enterNosFile(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNosFile" ):
                listener.exitNosFile(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNosFile" ):
                return visitor.visitNosFile(self)
            else:
                return visitor.visitChildren(self)




    def nosFile(self):

        localctx = NOSParser.NosFileContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_nosFile)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 133
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==1:
                self.state = 132
                self.packageDecl()


            self.state = 138
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==4:
                self.state = 135
                self.importDecl()
                self.state = 140
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 146
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 17314615360) != 0):
                self.state = 144
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [6]:
                    self.state = 141
                    self.nodeDecl()
                    pass
                elif token in [19]:
                    self.state = 142
                    self.launchDecl()
                    pass
                elif token in [12, 27, 34]:
                    self.state = 143
                    self.interfaceDecl()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 148
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 149
            self.match(NOSParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PackageDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PACKAGE(self):
            return self.getToken(NOSParser.PACKAGE, 0)

        def identifier(self):
            return self.getTypedRuleContext(NOSParser.IdentifierContext,0)


        def version(self):
            return self.getTypedRuleContext(NOSParser.VersionContext,0)


        def depends(self):
            return self.getTypedRuleContext(NOSParser.DependsContext,0)


        def getRuleIndex(self):
            return NOSParser.RULE_packageDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPackageDecl" ):
                listener.enterPackageDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPackageDecl" ):
                listener.exitPackageDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPackageDecl" ):
                return visitor.visitPackageDecl(self)
            else:
                return visitor.visitChildren(self)




    def packageDecl(self):

        localctx = NOSParser.PackageDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_packageDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 151
            self.match(NOSParser.PACKAGE)
            self.state = 152
            self.identifier()
            self.state = 154
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==2:
                self.state = 153
                self.version()


            self.state = 157
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==3:
                self.state = 156
                self.depends()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VersionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VERSION(self):
            return self.getToken(NOSParser.VERSION, 0)

        def STRING_LITERAL(self):
            return self.getToken(NOSParser.STRING_LITERAL, 0)

        def getRuleIndex(self):
            return NOSParser.RULE_version

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVersion" ):
                listener.enterVersion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVersion" ):
                listener.exitVersion(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVersion" ):
                return visitor.visitVersion(self)
            else:
                return visitor.visitChildren(self)




    def version(self):

        localctx = NOSParser.VersionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_version)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 159
            self.match(NOSParser.VERSION)
            self.state = 160
            self.match(NOSParser.STRING_LITERAL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DependsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DEPENDS(self):
            return self.getToken(NOSParser.DEPENDS, 0)

        def COLON(self):
            return self.getToken(NOSParser.COLON, 0)

        def LBRACKET(self):
            return self.getToken(NOSParser.LBRACKET, 0)

        def STRING_LITERAL(self, i:int=None):
            if i is None:
                return self.getTokens(NOSParser.STRING_LITERAL)
            else:
                return self.getToken(NOSParser.STRING_LITERAL, i)

        def RBRACKET(self):
            return self.getToken(NOSParser.RBRACKET, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(NOSParser.COMMA)
            else:
                return self.getToken(NOSParser.COMMA, i)

        def getRuleIndex(self):
            return NOSParser.RULE_depends

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDepends" ):
                listener.enterDepends(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDepends" ):
                listener.exitDepends(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDepends" ):
                return visitor.visitDepends(self)
            else:
                return visitor.visitChildren(self)




    def depends(self):

        localctx = NOSParser.DependsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_depends)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 162
            self.match(NOSParser.DEPENDS)
            self.state = 163
            self.match(NOSParser.COLON)
            self.state = 164
            self.match(NOSParser.LBRACKET)
            self.state = 165
            self.match(NOSParser.STRING_LITERAL)
            self.state = 170
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==77:
                self.state = 166
                self.match(NOSParser.COMMA)
                self.state = 167
                self.match(NOSParser.STRING_LITERAL)
                self.state = 172
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 173
            self.match(NOSParser.RBRACKET)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ImportDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IMPORT(self):
            return self.getToken(NOSParser.IMPORT, 0)

        def qualifiedIdentifier(self):
            return self.getTypedRuleContext(NOSParser.QualifiedIdentifierContext,0)


        def AS(self):
            return self.getToken(NOSParser.AS, 0)

        def identifier(self):
            return self.getTypedRuleContext(NOSParser.IdentifierContext,0)


        def getRuleIndex(self):
            return NOSParser.RULE_importDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterImportDecl" ):
                listener.enterImportDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitImportDecl" ):
                listener.exitImportDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitImportDecl" ):
                return visitor.visitImportDecl(self)
            else:
                return visitor.visitChildren(self)




    def importDecl(self):

        localctx = NOSParser.ImportDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_importDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 175
            self.match(NOSParser.IMPORT)
            self.state = 176
            self.qualifiedIdentifier()
            self.state = 179
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==5:
                self.state = 177
                self.match(NOSParser.AS)
                self.state = 178
                self.identifier()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NodeDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NODE(self):
            return self.getToken(NOSParser.NODE, 0)

        def identifier(self):
            return self.getTypedRuleContext(NOSParser.IdentifierContext,0)


        def LBRACE(self):
            return self.getToken(NOSParser.LBRACE, 0)

        def nodeBody(self):
            return self.getTypedRuleContext(NOSParser.NodeBodyContext,0)


        def RBRACE(self):
            return self.getToken(NOSParser.RBRACE, 0)

        def getRuleIndex(self):
            return NOSParser.RULE_nodeDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNodeDecl" ):
                listener.enterNodeDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNodeDecl" ):
                listener.exitNodeDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNodeDecl" ):
                return visitor.visitNodeDecl(self)
            else:
                return visitor.visitChildren(self)




    def nodeDecl(self):

        localctx = NOSParser.NodeDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_nodeDecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 181
            self.match(NOSParser.NODE)
            self.state = 182
            self.identifier()
            self.state = 183
            self.match(NOSParser.LBRACE)
            self.state = 184
            self.nodeBody()
            self.state = 185
            self.match(NOSParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NodeBodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def parameterBlock(self):
            return self.getTypedRuleContext(NOSParser.ParameterBlockContext,0)


        def subscriptionBlock(self):
            return self.getTypedRuleContext(NOSParser.SubscriptionBlockContext,0)


        def publicationBlock(self):
            return self.getTypedRuleContext(NOSParser.PublicationBlockContext,0)


        def serviceBlock(self):
            return self.getTypedRuleContext(NOSParser.ServiceBlockContext,0)


        def actionBlock(self):
            return self.getTypedRuleContext(NOSParser.ActionBlockContext,0)


        def lifecycleDecl(self):
            return self.getTypedRuleContext(NOSParser.LifecycleDeclContext,0)


        def componentBlock(self):
            return self.getTypedRuleContext(NOSParser.ComponentBlockContext,0)


        def callbackDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(NOSParser.CallbackDeclContext)
            else:
                return self.getTypedRuleContext(NOSParser.CallbackDeclContext,i)


        def getRuleIndex(self):
            return NOSParser.RULE_nodeBody

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNodeBody" ):
                listener.enterNodeBody(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNodeBody" ):
                listener.exitNodeBody(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNodeBody" ):
                return visitor.visitNodeBody(self)
            else:
                return visitor.visitChildren(self)




    def nodeBody(self):

        localctx = NOSParser.NodeBodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_nodeBody)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 188
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==7:
                self.state = 187
                self.parameterBlock()


            self.state = 191
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==8:
                self.state = 190
                self.subscriptionBlock()


            self.state = 194
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==9:
                self.state = 193
                self.publicationBlock()


            self.state = 197
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==10:
                self.state = 196
                self.serviceBlock()


            self.state = 200
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==11:
                self.state = 199
                self.actionBlock()


            self.state = 203
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==13:
                self.state = 202
                self.lifecycleDecl()


            self.state = 206
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==14:
                self.state = 205
                self.componentBlock()


            self.state = 211
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 491520) != 0):
                self.state = 208
                self.callbackDecl()
                self.state = 213
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParameterBlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PARAMETERS(self):
            return self.getToken(NOSParser.PARAMETERS, 0)

        def LBRACE(self):
            return self.getToken(NOSParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(NOSParser.RBRACE, 0)

        def parameterDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(NOSParser.ParameterDeclContext)
            else:
                return self.getTypedRuleContext(NOSParser.ParameterDeclContext,i)


        def getRuleIndex(self):
            return NOSParser.RULE_parameterBlock

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParameterBlock" ):
                listener.enterParameterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParameterBlock" ):
                listener.exitParameterBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParameterBlock" ):
                return visitor.visitParameterBlock(self)
            else:
                return visitor.visitChildren(self)




    def parameterBlock(self):

        localctx = NOSParser.ParameterBlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_parameterBlock)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 214
            self.match(NOSParser.PARAMETERS)
            self.state = 215
            self.match(NOSParser.LBRACE)
            self.state = 219
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==88:
                self.state = 216
                self.parameterDecl()
                self.state = 221
                self._errHandler.sync(self)
                _la = self._input.LA(1)
